--- a/SaltaVincula/src/app/tab1/tab1.page.html
+++ b/SaltaVincula/src/app/tab1/tab1.page.html
@@ -1,21 +1,3 @@
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content> -->
-
 <ion-header>
   <ion-toolbar>
     <ion-title>
@@ -29,14 +11,22 @@
 
     <ion-card *ngFor="let publicacion of publicaciones">
       <ion-card-header>
-        {{ publicacion.titulo }}
+        {{ publicacion.usuario }}
       </ion-card-header>
       <ion-card-content>
         <ion-img *ngIf="publicacion.tipo === 'imagen'" [src]="publicacion.imagenUrl"></ion-img>
         <iframe *ngIf="publicacion.tipo === 'video'" width="100%" height="315" [src]="getSafeVideoUrl(publicacion.videoUrl)" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p>{{ publicacion.texto }}</p>
+        
       </ion-card-content>
+
+
+      <ion-button (click)="abrirComentariosModal(publicacion)">Comentarios</ion-button>
+
+
     </ion-card>
 
   </ion-list>
 </ion-content>
+
+
