--- a/SaltaVincula/src/app/tab3/tab3.page.html
+++ b/SaltaVincula/src/app/tab3/tab3.page.html
@@ -1,10 +1,11 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header collapse="condense" class="header1">
     <ion-toolbar>
+      <ion-back-button icon="arrow-undo-sharp" text="" slot="start" defaultHref="/"></ion-back-button>
       <ion-title>ejemPerfil23</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div>
+  <div class="header2">
     <img src="../../assets/img/modelo-foto-perfil.webp" alt="foto perfil">
     <div>
       <p>Publicaciones</p>
@@ -18,6 +19,17 @@
       <p>Siguiendo</p>
       <p>{{ siguiendo }}</p>
     </div>
+  </div>
+  <div class="header3">
+    <p class="header3__text-nombre">{{ header_3_text_nombre }}</p>
+    <p class="header3__text-edad">{{ header_3_text_edad }}</p>
+    <p class="header3__text-lugar">{{ header_3_text_lugar }}</p>
+    <p class="header3__text-oficio">{{ header_3_text_oficio }}</p>
+  </div>
+  <div class="header4">
+    <ul>
+      <li *ngFor="let historia of historias"><img src="../../assets/img/modelo-foto-perfil.webp" alt="">{{ historia }}</li>
+    </ul>
   </div>
 
 </ion-content>
