--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -9,22 +9,82 @@ ion-content {
         }
     }
     div {
+        margin: 5px;
+    }
+    div.header2 {
+        padding: 5px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
+        align-items: center;
+        max-width: 100%;
+        border: 0.5px solid black;
         img {
-            border-radius: 50%;
+            border-radius: 100%;
             width: 100px;
             height: 100px;
+            border: 5px solid rgb(255, 69, 69);
         }
         div {
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
             p {
                 text-align: center;
+                font-size: 14px;
+                font-weight: bolder;
             }
             p {
-
+                font-size: 16px;
             }
         }
+    }
+    div.header3 {
+        padding-left: 10px;
+        border: 1px solid black;
+        p {
+            font-size: 16px;
+            margin-bottom: 2px;
+        }
+        p.header3__text-nombre {
+            font-weight: bolder;
+            font-size: 18px;
+        }
+        p.header3__text-edad {
+
+        }
+        p.header3__text-lugar {
+        }
+        p.header3__text-oficio {
+
+        }
+    }
+    div.header4 {
+        margin-top: 20px;
+        overflow-x: auto;
+        ul {
+            display: flex;
+            li {
+                min-width: 100px;
+                min-height: 100px;
+                margin: 1px;
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                align-items: center;
+                justify-content: center;
+                white-space: nowrap;
+                img {
+                    border-radius: 100%;
+                    min-width: 60px;
+                    max-width: 60px;
+                    min-height: 60px;
+                    max-height: 60px;
+                }
+            }
+        }
+    }
+    div.header4::-webkit-scrollbar {
+        display: none;
     }
 }
