solucionados los comentarios

--- a/SaltaVincula/src/app/componentes/comentarios/comentarios.component.html
+++ b/SaltaVincula/src/app/componentes/comentarios/comentarios.component.html
@@ -1,41 +1,24 @@
-<ion-header>
+<ion-header *ngIf="comentariosAbiertos">
   <ion-toolbar>
     <ion-title>Comentarios</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-button id="open-modal" expand="block">Comentar</ion-button>
-  <p>{{ message }}</p>
-  <ion-button (click)="cancel()">Volver</ion-button>
-  <ion-button routerLink=" /tabs/tab1"(click)="cancel()">Tab Principal</ion-button> 
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="/" >volverrr</ion-back-button>
-  </ion-buttons>
-  <!-- aqui tengo un problema con el boton para volver atras -->
-  <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-buttons slot="start">
-            <ion-button (click)="cancel()">Cancelar</ion-button>
-          </ion-buttons>
-          <ion-title>Comentarios</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="confirm()" [strong]="true">Confirmar</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <ion-item>
-          <ion-input
-            label="Ingresá tu comentario"
-            labelPlacement="stacked"
-            type="text"
-            placeholder="Tu comentario"
-            [(ngModel)]="name"
-          ></ion-input>
-        </ion-item>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+  
+  <ion-item>
+    <ion-input
+      label="Ingresá tu comentario"
+      labelPlacement="stacked"
+      type="text"
+      placeholder="Tu comentario"
+      [(ngModel)]="comentario"
+    ></ion-input>
+    <ion-buttons slot="start">
+      <ion-button (click)="volver()">Volver</ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="confirm()" [strong]="true">Confirmar</ion-button>
+    </ion-buttons>
+  </ion-item>
+  <textarea readonly>{{ message }}</textarea>
 </ion-content>
