--- a/SaltaVincula/src/app/tab1/tab1.page.html
+++ b/SaltaVincula/src/app/tab1/tab1.page.html
@@ -8,7 +8,6 @@
 
 <ion-content>
   <ion-list>
-
     <ion-card *ngFor="let publicacion of publicaciones">
       <ion-card-header>
         {{ publicacion.usuario }}
@@ -17,16 +16,8 @@
         <ion-img *ngIf="publicacion.tipo === 'imagen'" [src]="publicacion.imagenUrl"></ion-img>
         <iframe *ngIf="publicacion.tipo === 'video'" width="100%" height="315" [src]="getSafeVideoUrl(publicacion.videoUrl)" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p>{{ publicacion.texto }}</p>
-        
       </ion-card-content>
-
-
-      <ion-button (click)="abrirComentariosModal(publicacion)">Comentarios</ion-button>
-
-
+      <ion-button (click)="abrirComentarios(publicacion)" expand="block">Comentar</ion-button>
     </ion-card>
-
   </ion-list>
 </ion-content>
-
-
