--- a/SaltaVincula/src/app/tab1/tab1.page.html
+++ b/SaltaVincula/src/app/tab1/tab1.page.html
@@ -1,10 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Publicaciones
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Publicaciones"></app-header>
 
 <ion-content>
   <ion-list>
