arreglado el header

--- a/SaltaVincula/src/app/componentes/header/header.component.html
+++ b/SaltaVincula/src/app/componentes/header/header.component.html
@@ -9,7 +9,7 @@
 
 <div class="header">
   <div class="app-name">
-    <img src="./src/assets/img/modelo-foto-perfil.webp" alt="">
+    <img [src]="imgURL" alt="">
   </div>
   
   <div class="titulo">
