--- a/SaltaVincula/src/app/tab1/tab1.page.scss
+++ b/SaltaVincula/src/app/tab1/tab1.page.scss
@@ -1,18 +1,6 @@
-// .comentarios{
-//     color:blue;
-//     background: #dae0e5;
-//     width: 150px;
-//     text-align: center;
-//     margin-left: 10px;
-//     border-radius: 10px;
-//     padding: 5px;
-// }
-// .icon{
-//     font-size: 20px;
-//     margin-bottom: -5px;
-// }
+ion-grid{
+    background-color: rgb(124, 216, 244);
+    padding: 15px 8px;
+}
 
 
-// ion-card{
-//     height: 1100px;
-// }
