--- a/SaltaVincula/src/app/tab1/tab1.page.scss
+++ b/SaltaVincula/src/app/tab1/tab1.page.scss
@@ -1,5 +1,8 @@
+ion-card-content{
+    padding-bottom: 1px;
+}
 .grid-nuevaPublicacion{
-    background-color: rgb(124, 216, 244);
+    background-color: rgb(169, 213, 225);
     padding: 15px 8px;
 }
 
@@ -13,4 +16,4 @@
 .fotoYnombre {
     display: flex;
     align-items: center; /* Ajusta según sea necesario */
-  }
+}
