se hizo un diseño mas responsive de perfil y se agrego una galeria de imgs

--- a/SaltaVincula/src/app/tab3/tab3.page.html
+++ b/SaltaVincula/src/app/tab3/tab3.page.html
@@ -2,11 +2,11 @@
   <ion-header collapse="condense" class="header1">
     <ion-toolbar>
       <ion-back-button icon="arrow-undo-sharp" text="" slot="start" defaultHref="/"></ion-back-button>
-      <ion-title>ejemPerfil23</ion-title>
+      <ion-title>TomRiddle1926</ion-title>
     </ion-toolbar>
   </ion-header>
   <div class="header2">
-    <img src="../../assets/img/modelo-foto-perfil.webp" alt="foto perfil">
+    <img src="../../assets/img/tomRiddle.webp" alt="foto perfil">
     <div>
       <p>Publicaciones</p>
       <p>{{ publicaciones }}</p>
@@ -30,6 +30,17 @@
     <ul>
       <li *ngFor="let historia of historias"><img src="../../assets/img/modelo-foto-perfil.webp" alt="">{{ historia }}</li>
     </ul>
+  </div>
+  <div class="main">
+    <img src="../../assets/img/1.jpg" alt="img 1">
+    <img src="../../assets/img/2.jpg" alt="img 2">
+    <img src="../../assets/img/3.jpg" alt="img 3">
+    <img src="../../assets/img/4.jpg" alt="img 4">
+    <img src="../../assets/img/5.jpg" alt="img 5">
+    <img src="../../assets/img/6.jpg" alt="img 6">
+    <img src="../../assets/img/7.jpg" alt="img 7">
+    <img src="../../assets/img/8.jpg" alt="img 8">
+    <img src="../../assets/img/9.jpg" alt="img 9">
   </div>
 
 </ion-content>
