--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -8,21 +8,25 @@ ion-content {
             }
         }
     }
-    div {
-        margin: 5px;
+    div.header2,
+    div.header3,
+    div.header4,
+    div.main {
+        margin: 10px;
+        padding: 1px;
     }
     div.header2 {
-        padding: 5px;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         max-width: 100%;
-        border: 0.5px solid black;
         img {
             border-radius: 100%;
-            width: 100px;
-            height: 100px;
-            border: 5px solid rgb(255, 69, 69);
+            min-width: 10vh;
+            min-height: 10vh;
+            max-width: 10vh;
+            max-height: 10vh;
+            object-fit: cover;
         }
         div {
             display: flex;
@@ -31,24 +35,22 @@ ion-content {
             justify-content: center;
             p {
                 text-align: center;
-                font-size: 14px;
+                font-size: 3vw;
                 font-weight: bolder;
             }
             p {
-                font-size: 16px;
+                font-size: 4vw;
             }
         }
     }
     div.header3 {
-        padding-left: 10px;
-        border: 1px solid black;
         p {
-            font-size: 16px;
+            font-size: 4vw;
             margin-bottom: 2px;
         }
         p.header3__text-nombre {
             font-weight: bolder;
-            font-size: 18px;
+            font-size: 4vw;
         }
         p.header3__text-edad {
 
@@ -60,7 +62,6 @@ ion-content {
         }
     }
     div.header4 {
-        margin-top: 20px;
         overflow-x: auto;
         ul {
             display: flex;
@@ -76,6 +77,8 @@ ion-content {
                 white-space: nowrap;
                 img {
                     border-radius: 100%;
+                    border: 1px solid black;
+                    padding: 4px;
                     min-width: 60px;
                     max-width: 60px;
                     min-height: 60px;
@@ -86,5 +89,18 @@ ion-content {
     }
     div.header4::-webkit-scrollbar {
         display: none;
+    }
+    div.main {
+        border: 1px solid black;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 0.5vw;
+        grid-auto-rows: 18vh;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
