estructura de la página de mensajes

--- a/SaltaVincula/src/app/componentes/header/header.component.html
+++ b/SaltaVincula/src/app/componentes/header/header.component.html
@@ -12,12 +12,10 @@
     <img [src]="imgURL" alt="">
   </div>
   
-  <div class="titulo">
-    <div class="titulo-contenido"><strong>{{ title }}</strong></div>
-  </div>
+  <div class="titulo-contenido"><strong>{{ title }}</strong></div>
 
   <div class="message" (click)="redirectToTab2()">
-    <img src="https://cdn.icon-icons.com/icons2/3245/PNG/512/facebook_messenger_icon_198194.png" alt="">
+    <img src="https://cdn-icons-png.flaticon.com/512/4518/4518512.png" alt="">
   </div>
 </div>
 
