--- a/SaltaVincula/src/app/tab2/tab2.page.html
+++ b/SaltaVincula/src/app/tab2/tab2.page.html
@@ -1,7 +1,29 @@
-<app-header title="Mensajes"></app-header>
+<!-- <app-header title="Mensajes"></app-header> -->
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <div class="app-header">
+      <div class="app-header-title"><strong>{{ usuarioPorDefecto }}</strong></div>
+    </div>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content [fullscreen]="true">
-  <p>aqui hay que hacer el front para mensajes</p>
-
+  <ion-toolbar>
+    <ion-searchbar placeholder="Buscar mensajes"></ion-searchbar>
+  </ion-toolbar>
+  <ion-list>
+    <ion-item *ngFor="let mensaje of mensajes">
+      <ion-avatar slot="start">
+        <img [src]="mensaje.fotoPerfil" alt="Foto de perfil">
+      </ion-avatar>
+      <ion-label>
+        <h2>{{ mensaje.nombre }}</h2>
+        <p>{{ mensaje.texto }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
