cambiado icono de mensaje

--- a/SaltaVincula/src/app/componentes/header/header.component.scss
+++ b/SaltaVincula/src/app/componentes/header/header.component.scss
@@ -17,7 +17,9 @@
     width: 20%;
   }
   .message{
-    margin-right: 25px;
-    margin-left: 60px;
+    //margin-right: 25px;
+    //margin-left: 60px;
+    //margin-right: 10px;
     width: 5%;
+    transform: scale(3);
   }
