--- a/SaltaVincula/src/app/tab1/tab1.page.html
+++ b/SaltaVincula/src/app/tab1/tab1.page.html
@@ -6,10 +6,8 @@
   <ion-grid class="grid-nuevaPublicacion">
       <!-- Campo de texto para nueva publicación -->
     <ion-item>
-      <div class="fotoYnombre">
-        <!-- Foto de perfil -->
-        <img [src]="fotoPerfilPorDefecto" alt="foto perfil" id="fotoPerfil">
-      </div>
+      <!-- Foto de perfil -->
+      <img [src]="fotoPerfilPorDefecto" alt="foto perfil"  id="fotoPerfil1">
       <ion-textarea placeholder="Escribe tu nueva publicación" [(ngModel)]="nuevaPublicacion"></ion-textarea>
     </ion-item>
     <ion-item>
@@ -42,7 +40,7 @@
       <ion-card-header>
         <div class="fotoYnombre">
           <!-- Foto de perfil -->
-          <img [src]="publicacion.imagenUsuario" alt="foto perfil" id="fotoPerfil">
+          <img [src]="publicacion.imagenUsuario" alt="foto perfil" class="fotoPerfil">
           <!-- Nombre de usuario -->
           <div class="enColumna">
             <h2><strong>{{ publicacion.usuario }}</strong></h2>
