--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -4,7 +4,7 @@ ion-content {
         ion-toolbar {
             ion-title {
                 text-align: center;
-                font-size: 22px;
+                font-size: 5vw;
             }
         }
     }
@@ -62,36 +62,30 @@ ion-content {
         }
     }
     div.header4 {
-        overflow-x: auto;
-        ul {
+        text-align: center;
+        swiper-container {
             display: flex;
-            li {
-                min-width: 100px;
-                min-height: 100px;
-                margin: 1px;
-                display: flex;
-                flex-direction: column;
-                text-align: center;
-                align-items: center;
-                justify-content: center;
-                white-space: nowrap;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            swiper-slide {
+                width: 100%;
+                margin-right: 1px;
                 img {
                     border-radius: 100%;
-                    border: 1px solid black;
-                    padding: 4px;
-                    min-width: 60px;
-                    max-width: 60px;
-                    min-height: 60px;
-                    max-height: 60px;
+                    width: 15vw;
+                    height: 15vw;
+                    object-fit: cover;
+                }
+                p {
+                    font-size: 4vw;
+                    white-space: nowrap;
                 }
             }
         }
     }
-    div.header4::-webkit-scrollbar {
-        display: none;
-    }
+
     div.main {
-        border: 1px solid black;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 0.5vw;
