front del login casi terminado

--- a/SaltaVincula/src/app/login/login.page.html
+++ b/SaltaVincula/src/app/login/login.page.html
@@ -1,13 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="principal">
+    <h1>SaltaVincula</h1>
+    <div class="form">
+      <form action="">
+        <h2>Login</h2>
+        <label for="">USUARIO</label>
+        <input type="text" required placeholder="voldemort12301">
+        <label for="">CONTRASEÑA</label>
+        <input type="password" required placeholder="harry1951">
+
+        <button type="submit">Iniciar Sesion</button>
+      </form>
+    </div>
+  </div>
 </ion-content>
