se agrego ion-card a la galeria de tab3

--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -90,10 +90,14 @@ ion-content {
         grid-gap: 0.5vw;
         grid-auto-rows: 18vh;
 
-        img {
-            object-fit: cover;
+        ion-card {
             width: 100%;
             height: 100%;
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
