--- a/SaltaVincula/src/app/tab3/tab3.page.css
+++ b/SaltaVincula/src/app/tab3/tab3.page.css
@@ -80,7 +80,11 @@ ion-content div.main {
   grid-gap: 0.5vw;
   grid-auto-rows: 18vh;
 }
-ion-content div.main img {
+ion-content div.main ion-card {
+  width: 100%;
+  height: 100%;
+}
+ion-content div.main ion-card img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
