--- a/SaltaVincula/src/app/tab3/tab3.page.html
+++ b/SaltaVincula/src/app/tab3/tab3.page.html
@@ -36,7 +36,9 @@
   </div>
   <div class="main">
     <div *ngFor="let img of historias_img">
-      <a target="_blank" [href]="img"><img [src]="img"></a>
+      <ion-card>
+        <a target="_blank" [href]="img"><img [src]="img"></a>
+      </ion-card>
     </div>
   </div>
 
