agregada opcion eliminar publicacion

--- a/SaltaVincula/src/app/tab1/tab1.page.html
+++ b/SaltaVincula/src/app/tab1/tab1.page.html
@@ -45,6 +45,10 @@
           <div class="enColumna">
             <h2><strong>{{ publicacion.usuario }}</strong></h2>
             <p class="tiempo">Hace {{ publicacion.tiempo }}</p>
+            <ion-button (click)="mostrarOpciones(publicacion)" fill="clear" class="boton-opciones">
+              <ion-icon name="ellipsis-horizontal" size="large"></ion-icon>
+            </ion-button>
+            
           </div>
           
         </div>
