--- a/SaltaVincula/src/app/tab1/tab1.page.scss
+++ b/SaltaVincula/src/app/tab1/tab1.page.scss
@@ -36,3 +36,9 @@ ion-textarea{
 .tiempo{
     margin: 0px 0px 2px 5px;
 }
+
+.boton-opciones {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
