--- a/SaltaVincula/src/app/tabs/tabs.page.html
+++ b/SaltaVincula/src/app/tabs/tabs.page.html
@@ -13,6 +13,7 @@
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="person"></ion-icon>
+      <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
