arreglado el boton de borrar (disabled)

--- a/SaltaVincula/src/app/tab2/tab2.page.html
+++ b/SaltaVincula/src/app/tab2/tab2.page.html
@@ -23,7 +23,7 @@
         <h2>{{ mensaje.nombre }}</h2>
         <p>{{ mensaje.texto }}</p>
       </ion-label>
-      <ion-button (click)="eliminarMensaje(mensaje)" color="light"[disabled]="true"slot="end">
+      <ion-button (click)="eliminarMensaje(mensaje)" color="light"slot="end">
         <ion-icon name="trash"></ion-icon>
       </ion-button>
     </ion-item>
