se hicieron cambios

--- a/SaltaVincula/src/app/componentes/header/header.component.html
+++ b/SaltaVincula/src/app/componentes/header/header.component.html
@@ -1,12 +1,14 @@
-
 <div class="header">
   <div class="app-name">
     <img [src]="imgURL" alt="">
   </div>
   
-  <div class="titulo-contenido"><strong>{{ title }}</strong></div>
+  <div class="titulo-contenido">
+    <strong>{{ title }}</strong>
+  </div>
 
   <div class="message" (click)="redirectToTab2()">
+    
     <ion-icon name="mail-open"></ion-icon>
     <!-- <img src="https://cdn-icons-png.flaticon.com/512/4518/4518512.png" alt=""> -->
   </div>
