--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -1,13 +1,6 @@
 * {margin: 0; padding: 0;}
 ion-content {
-    ion-header {
-        ion-toolbar {
-            ion-title {
-                text-align: center;
-                font-size: 5vw;
-            }
-        }
-    }
+    background: red;
     div.header2,
     div.header3,
     div.header4,
